Fix bugs based on QA's feedback. Add react-gis CSS style to fix the style issues.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -276,8 +276,7 @@
       "txt-deleteFilter": "$t(txt-delete) Query Filter",
       "txt-viewRule": "$t(txt-view) $t(txt-alert) $t(txt-rule)",
       "txt-downloadMalware": "$t(txt-download) Malware",
-      "txt-maxDataMsg": "The maximum data count is 10,000",
-      "txt-viewADrecord": "View AD Record"
+      "txt-maxDataMsg": "The maximum data count is 10,000"
     }
   },
 
