Fix bugs for Filter query open/save. Code refactor for owner-mixname file.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -45,6 +45,7 @@
   "txt-remove": "Remove",
   "txt-refresh": "Refresh",
   "txt-select": "Select",
+  "txt-selected": "Selected",
   "txt-deselect": "Deselect",
   "txt-back": "Back",
   "txt-normal": "Normal",
