--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -45,6 +45,7 @@
   "txt-remove": "移除",
   "txt-refresh": "更新",
   "txt-select": "選擇",
+  "txt-selected": "已選擇",
   "txt-deselect": "取消選擇",
   "txt-back": "返回",
   "txt-normal": "正常",
