Major code refactor for Modal CSS styles and Syslog JS files.

--- a/locales/en/tableFields.json
+++ b/locales/en/tableFields.json
@@ -1,4 +1,6 @@
 {
+  "txt-add": "Add",  
+  "txt-view": "View",
   "connectionsFields": {
     "_tableMenu_": "",
     "firstPacket": "First Packet",
