--- a/locales/zh/errors.json
+++ b/locales/zh/errors.json
@@ -44,13 +44,14 @@
 
 	"1001":"無權限存取",
 	"1101":"請輸入欄位: {{field}}",
+	"-9001": "所屬人員ID不得重複",
 
 	"-13": "需設定有效結束時間",
-  "-1002": "帳號已存在",
-  "-1004": "密碼強度需符合長度至少12, 至少一個大寫英文字, 至少一個小寫英文字, 至少一個數字, 至少一個特殊字元, 不能與近五次密碼相同",
-  "-1005": "密碼已到期",
-  "-1006": "登入錯誤已超過5次",
+	"-1002": "帳號已存在",
+	"-1004": "密碼強度需符合長度至少12, 至少一個大寫英文字, 至少一個小寫英文字, 至少一個數字, 至少一個特殊字元, 不能與近五次密碼相同",
+	"-1005": "密碼已到期",
+	"-1006": "登入錯誤已超過5次",
 
-  	"txt-param-null": "參數為空",
-  	"txt-account-fail" : "無法由AD獲取帳號資訊"
+	"txt-param-null": "參數為空",
+	"txt-account-fail" : "無法由AD獲取帳號資訊"
 }
