--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -359,6 +359,7 @@
     "txt-reCheck": "重新檢測",
     "txt-reCompress": "重新壓縮",
     "txt-irMsg": "IR資料已上傳至",
+    "txt-itemSelection": "套餐選擇",
     "txt-editFloorMap": "$t(txt-edit)$t(txt-floorMap)",
     "txt-viewDevice": "$t(txt-view)$t(alert.txt-ipBasicInfo)",
     "txt-viewHMD": "$t(txt-view)$t(alert.txt-safetyScanInfo)",
