Update HMD IR item selection. Fix/update various items based on feedback.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -348,6 +348,7 @@
     "txt-deviceMap": "Device Map",
     "txt-AddIP": "Add IP",
     "txt-autoSettings": "Auto Settings",
+    "txt-testQuery": "Test Query",
     "txt-backToList": "$t(txt-back) to $t(txt-listText)",
     "txt-backToMap": "$t(txt-back) to $t(txt-map)",
     "txt-lastUpdate": "Last Update",
@@ -372,6 +373,29 @@
       "txt-netflow": "Netflow",
       "txt-scanner": "Scanner",
       "txt-connectionsFail": "Connections Fail"
+    },
+    "ir-type": {
+      "txt-quick": "快速採證",
+      "txt-common": "常用採證",
+      "txt-all": "完整採證"
+    },
+    "ir-list": {
+      "txt-list1": "記憶體採證",
+      "txt-list2": "系統基本資訊",
+      "txt-list3": "檔案時間軸與簽章",
+      "txt-list4": "網路連線與程序列表",
+      "txt-list5": "系統自動執行清單",
+      "txt-list6": "工作排程列表",
+      "txt-list7": "網頁瀏覽歷史紀錄",
+      "txt-list8": "電子郵件資料",
+      "txt-list9": "Windows Registry",
+      "txt-list10": "Event Log",
+      "txt-list11": "刪除還原的檔案",
+      "txt-list12": "最近開啟檔案列表",
+      "txt-list13": "圖像搜尋",
+      "txt-list14": "影像搜尋",
+      "txt-list15": "微軟檔案搜尋",
+      "txt-list16": "關鍵字檔案搜尋"
     }
   },
 
@@ -516,10 +540,12 @@
     "value": "Value",
     "conditions": "Conditions",
     "query": "Query",
+    "txt-getLatest": "Get Latest Input Text",
     "txt-customFieldName": "Custom Field Name",
     "txt-addSyslog": "Add Syslog",
     "txt-delSyslog": "Delete Syslog",
     "txt-eventDist": " Event Distribution",
+    "txt-viewEvents": "View Events",
     "txt-overallDist": "Overall Distribution",
     "txt-editHosts": "Edit Hosts",
     "txt-timelineUnavailable": "Timeline data is not available"
