Code refactor for Private Details dialog. Update locale files.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -360,7 +360,7 @@
     "txt-reCheck": "Re-check",
     "txt-reCompress": "Re-compress",
     "txt-irMsg": "IR data has been uploaded to",
-    "txt-itemSelection": "Item Selection",
+    "txt-itemSelection": "Select IR Set",
     "txt-editFloorMap": "$t(txt-edit) $t(txt-floorMap)",
     "txt-viewDevice": "$t(txt-view) $t(alert.txt-ipBasicInfo)",
     "txt-viewHMD": "$t(txt-view) $t(alert.txt-safetyScanInfo)",
@@ -375,27 +375,27 @@
       "txt-connectionsFail": "Connections Fail"
     },
     "ir-type": {
-      "txt-quick": "快速採證",
-      "txt-common": "常用採證",
-      "txt-all": "完整採證"
+      "txt-quick": "Quick IR",
+      "txt-standard": "Standard IR",
+      "txt-full": "Full IR"
     },
     "ir-list": {
-      "txt-list1": "記憶體採證",
-      "txt-list2": "系統基本資訊",
-      "txt-list3": "檔案時間軸與簽章",
-      "txt-list4": "網路連線與程序列表",
-      "txt-list5": "系統自動執行清單",
-      "txt-list6": "工作排程列表",
-      "txt-list7": "網頁瀏覽歷史紀錄",
-      "txt-list8": "電子郵件資料",
+      "txt-list1": "Memory IR",
+      "txt-list2": "System Info",
+      "txt-list3": "File Timeline and Signature",
+      "txt-list4": "Network and Process",
+      "txt-list5": "Daemon List",
+      "txt-list6": "Scheduled Job List",
+      "txt-list7": "Browser History",
+      "txt-list8": "Email",
       "txt-list9": "Windows Registry",
       "txt-list10": "Event Log",
-      "txt-list11": "刪除還原的檔案",
-      "txt-list12": "最近開啟檔案列表",
-      "txt-list13": "圖像搜尋",
-      "txt-list14": "影像搜尋",
-      "txt-list15": "微軟檔案搜尋",
-      "txt-list16": "關鍵字檔案搜尋"
+      "txt-list11": "Recovery Deleted File",
+      "txt-list12": "Recently Open File",
+      "txt-list13": "Image Search",
+      "txt-list14": "Video Search",
+      "txt-list15": "Microsoft File Search",
+      "txt-list16": "Keyword File Search"
     }
   },
 
@@ -522,6 +522,11 @@
     "ip": "IP",
     "mac": "MAC",
     "owner": "Owner",
+    "userName": "User",
+    "disks": "$t(txt-disks)",
+    "shareFolders": "$t(txt-shareFolders)",
+    "cpu": "$t(txt-cpu)",
+    "ram": "$t(txt-ram)",
     "hostID": "Host ID",
     "hostName": "Hostname",
     "system": "System",
