--- a/locales/zh/accounts.json
+++ b/locales/zh/accounts.json
@@ -1,56 +1,63 @@
 {
-	"dlg-edit":"編輯帳號",
-	"dlg-add":"新增帳號",
-	"name":"名稱",
-	"username":"帳號",
-	"id-no":"身份證號碼",
-	"sex":"性別",
-	"phone":"電話",
-	"email":"Email",
-	"division":"單位",
-	"rank":"職稱",
-	"group":"群組",
-	"locked":"已鎖定",
-	"roles":"角色",
-	"rights":"權限",
-	"status":"帳號狀態",
-	"sex-types": {
-		"unknown": "未知",
-		"male": "男",
-		"female": "女"
-	},
-	"fields":{
-		"group":"$t(group)",
-		"roles":"$t(roles)",
-		"rights":"$t(rights)",
-		"locked":"$t(locked)"
-	},
-	"lbl-locked":"$t(locked)",
-	"lbl-role":"$t(roles)",
-	"ph-all-roles":"全部",
-	"ph-search":"輸入$t(name)/$t(username)/$t(id-no)",
-	"ph-account":"輸入帳號",
-	"ph-name":"輸入名字",
-	"l-account":"帳號",
-	"l-name":"姓名",
-	"l-email":"Email",
-	"l-unit":"單位",
-	"l-title":"位階",
-	"l-phone":"電話",
-	"l-password":"密碼",
-	"l-privileges":"角色",
-	"txt-delete":"刪除此帳號?",
-	"txt-unlock":"解鎖此帳號?",
+  "dlg-edit":"編輯帳號",
+  "dlg-add":"新增帳號",
+  "name":"名稱",
+  "username":"帳號",
+  "id-no":"身份證號碼",
+  "sex":"性別",
+  "phone":"電話",
+  "email":"Email",
+  "division":"單位",
+  "rank":"職稱",
+  "group":"群組",
+  "locked":"已鎖定",
+  "roles":"角色",
+  "rights":"權限",
+  "status":"帳號狀態",
+  "sex-types": {
+    "unknown": "未知",
+    "male": "男",
+    "female": "女"
+  },
+  "fields":{
+    "group":"$t(group)",
+    "roles":"$t(roles)",
+    "rights":"$t(rights)",
+    "locked":"$t(locked)"
+  },
+  "lbl-locked":"$t(locked)",
+  "lbl-role":"$t(roles)",
+  "ph-all-roles":"全部",
+  "ph-search":"輸入$t(name)/$t(username)/$t(id-no)",
+  "ph-account":"輸入帳號",
+  "ph-name":"輸入名字",
+  "l-account":"帳號",
+  "l-name":"姓名",
+  "l-email":"Email",
+  "l-unit":"單位",
+  "l-title":"位階",
+  "l-phone":"電話",
+  "l-password":"密碼",
+  "l-privileges":"角色",
+  "txt-delete":"刪除此帳號?",
+  "txt-unlock":"解鎖此帳號?",
   "txt-unlockAccountSuccess": "解鎖帳號成功",
-	"txt-add-account":"新增帳號",
-	"txt-edit-account":"編輯帳號",
-	"txt-delete-account":"刪除帳號",
-	"txt-only-num-eng":"由至少 4 位數字與英文字母組成",
-	"txt-email-invalid":"正確的email",
-
-	"change-expired-pwd":"請更改你的密碼，因密碼已過期",
-	"oldPwd":"舊密碼",
-	"newPwd":"新密碼",
-	"rewritePwd":"再次輸入新密碼",
-	"pwd-inconsistent":"兩次輸入的內容不相同"
+  "txt-add-account":"新增帳號",
+  "txt-edit-account":"編輯帳號",
+  "txt-delete-account":"刪除帳號",
+  "txt-only-num-eng":"由至少 4 位數字與英文字母組成",
+  "txt-email-invalid":"正確的email",
+  "accountFields": {
+    "account": "$t(l-account)",
+    "name": "$t(l-name)",
+    "email": "$t(l-email)",
+    "unit": "$t(l-unit)",
+    "title": "$t(l-title)",
+    "phone": "$t(l-phone)"
+  },
+  "change-expired-pwd":"請更改你的密碼，因密碼已過期",
+  "oldPwd":"舊密碼",
+  "newPwd":"新密碼",
+  "rewritePwd":"再次輸入新密碼",
+  "pwd-inconsistent":"兩次輸入的內容不相同"
 }
