--- a/locales/en/tableFields.json
+++ b/locales/en/tableFields.json
@@ -489,6 +489,18 @@
     "type": "Type",
     "compareResult": "Result"
   },
+  "malwareFields": {
+    "_FileInfo": {
+      "_Filepath": "File Path",
+      "_Filesize": "File Size",
+      "_HashValues": {
+        "_MD5": "Hash Value"
+      }
+    },
+    "_IsPE": "IsPE",
+    "_IsPEextension": "IsPEextension",
+    "_IsVerifyTrust": "IsVerifyTrust"
+  },
   "edgeFields": {
     "agentName": "Name",
     "ipPort": "VPN IP",
