--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -558,7 +558,7 @@
     "txt-getLatest": "取得最新串流資料",
     "txt-customFieldName": "自訂欄位名稱",
     "txt-addSyslog": "新增系統日誌",
-    "txt-delSyslog": "刪除系統日誌",
+    "txt-deleteSyslog": "刪除系統日誌",
     "txt-eventDist": "日誌串流事件趨勢圖",
     "txt-viewEvents": "檢視日誌串流事件",
     "txt-overallDist": "Overall Distribution",
