Fix Inventory and helper bugs.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -264,7 +264,7 @@
       "txt-top10text": "TOP 10 Dst. Service/Dst. Host/Dst. IP",
       "txt-analysisType": "Analysis Item",
       "txt-alertRule": "$t(txt-alert)$t(txt-rule)",
-      "txt-addAgentMsg": "Please add a new agent in the Agent Management page",
+      "txt-addAgentMsg": "Please add a new device in the Edge management page",
       "txt-showImageOnly": "Show images only",
       "txt-viewJSON": "$t(txt-view) JSON",
       "txt-exportCSV": "$t(txt-export) CSV",
@@ -558,7 +558,7 @@
     "txt-getLatest": "Get Latest Input Text",
     "txt-customFieldName": "Custom Field Name",
     "txt-addSyslog": "Add Syslog",
-    "txt-deleteSyslog": "Delete Syslog",
+    "txt-deleteSyslogdeleteSyslog": "Delete Syslog",
     "txt-eventDist": " Event Distribution",
     "txt-viewEvents": "View Events",
     "txt-overallDist": "Overall Distribution",
