--- a/locales/en/tableFields.json
+++ b/locales/en/tableFields.json
@@ -320,7 +320,7 @@
     "payloadMD5": "Payload MD5",
     "destLocType": "Dest Loc Type",
     "timestamp": "日期",
-    "Severity": "Severity",
+    "_severity_": "Severity",
     "Info": "Info",
     "Collector": "Collector",
     "Trigger": "Trigger",
@@ -497,9 +497,9 @@
         "_MD5": "Hash Value"
       }
     },
-    "_IsPE": "IsPE",
-    "_IsPEextension": "IsPEextension",
-    "_IsVerifyTrust": "IsVerifyTrust"
+    "_IsPE": "Is PE?",
+    "_IsPEextension": "Is PEextension?",
+    "_IsVerifyTrust": "Is VerifyTrust?"
   },
   "edgeFields": {
     "agentName": "Name",
