Add Virustotal search in Alert Info dialog

--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -215,6 +215,7 @@
     "txt-viewJSON": "$t(txt-view)JSON",
     "txt-queryMore": "查詢更多",
     "txt-queryEvents": "查詢相關事件",
+    "txt-searthVirustotal": "查詢 Virustotal",
     "txt-downloadPCAP": "下載檔案",
     "txt-downloadFile": "下載惡意程式",
     "txt-filterEmpty": "過濾無內容封包",
