--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -215,6 +215,7 @@
     "txt-viewJSON": "$t(txt-view)JSON",
     "txt-queryMore": "Query",
     "txt-queryEvents": "Query Events",
+    "txt-searthVirustotal": "Search Virustotal",
     "txt-downloadPCAP": "Download PCAP",
     "txt-downloadFile": "Download File",
     "txt-filterEmpty": "Filter empty packet",
