Add sync and import buttons for GCB. Refator Edge service type desc.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -362,6 +362,8 @@
     "txt-suspiciousFileName": "Suspicious Filename",
     "txt-suspiciousFilePath": "Suspicious File Path",
     "txt-reCheck": "Re-check",
+    "txt-syncGCB": "Sync GCB",
+    "txt-importGCB": "Import GCB",
     "txt-reCompress": "Re-compress",
     "txt-passCount": "Pass",
     "txt-totalItem": "Total",
