Add severity indicators for Alert Tree. Use the Top10InternalMaskedIp for the Dashboard internal maps.

--- a/locales/en/tableFields.json
+++ b/locales/en/tableFields.json
@@ -486,6 +486,7 @@
   "gcbFields": {
     "cceId": "CCE-ID",
     "name": "Name",
+    "type": "Type",
     "compareResult": "Result"
   },
   "malwareFields": {
