--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -26,7 +26,7 @@
   "txt-databytes": "Databytes",
   "txt-download": "Download",
   "txt-alert": "Alert",
-  "txt-alertMenu": "Alert",
+  "txt-alertMenu": "Alerts",
   "txt-rule": "Rule",
   "txt-update": "Update",
   "txt-upload": "Upload",
@@ -174,6 +174,7 @@
     "txt-statisticsInfo": "Statistics Info",
     "txt-attacksMap": "Attacks Map",
     "txt-alertStatistics": "Alert Statistics",
+    "txt-alertMaskedIpStatistics": "Masked IP Alert Statistics",
     "txt-alertThreatLevel": "Alert Threat Level",
     "txt-Top10ExternalPotSrcCountry": "Alert Source Country",
     "txt-Top10InternalSrcIp": "Alert Internal Source IP",
@@ -383,10 +384,10 @@
     },
     "scan-list": {
       "txt-yara": "Scan Process",
-      "txt-yaraScanFile": "Scan File",
+      "txt-yaraScanFile": "Scan File (Yara)",
+      "txt-malware": "Scan File (AI)",
       "txt-gcb": "GCB",
-      "txt-ir": "IR",
-      "txt-malware": "Malware Detection"
+      "txt-ir": "IR"
     },
     "ir-type": {
       "txt-quick": "Quick IR",
