--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -26,7 +26,7 @@
   "txt-databytes": "數據",
   "txt-download": "下載",
   "txt-alert": "告警",
-  "txt-alertMenu": "Alert",
+  "txt-alertMenu": "Alerts",
   "txt-rule": "規則",
   "txt-update": "更新",
   "txt-upload": "上傳",
@@ -174,6 +174,7 @@
     "txt-statisticsInfo": "統計資料",
     "txt-attacksMap": "攻擊地圖",
     "txt-alertStatistics": "告警數量統計",
+    "txt-alertMaskedIpStatistics": "網段威脅等級統計",
     "txt-alertThreatLevel": "告警威脅等級統計",
     "txt-Top10ExternalPotSrcCountry": "外部國家告警統計",
     "txt-Top10InternalSrcIp": "內部主機告警統計",
@@ -383,10 +384,10 @@
     },
     "scan-list": {
       "txt-yara": "Scan Process",
-      "txt-yaraScanFile": "Scan File",
+      "txt-yaraScanFile": "Scan File (Yara)",
+      "txt-malware": "Scan File (AI)",
       "txt-gcb": "GCB",
-      "txt-ir": "IR",
-      "txt-malware": "Malware Detection"
+      "txt-ir": "IR"
     },
     "ir-type": {
       "txt-quick": "快速採證",
