Add Internal Masked IP bar chart in Dashboard. Update chart tooltip display.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -117,6 +117,7 @@
   "txt-online": "Online",
   "txt-offline": "Offline",
   "txt-unstable": "Unstable",
+  "txt-severity": "Severity",
 
   "txt-dashboard": "Dashboard",
   "txt-netflow": "Netflow",
