--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -367,6 +367,7 @@
     "txt-reCheck": "重新檢測",
     "txt-reCompress": "重新壓縮",
     "txt-passCount": "通過",
+    "txt-validCount": "有效",
     "txt-totalItem": "總項目",
     "txt-irMsg": "IR資料已上傳至",
     "txt-itemSelection": "電腦採證",
@@ -546,7 +547,7 @@
     "hostName": "主機名稱",
     "system": "使用系統",
     "deviceType": "裝置類型",
-    "yaraScan": "Yara (可疑檔案數)",
+    "scanInfo": "安全掃描資訊",
     "keyword": "關鍵字",
     "connSize": "Connections Size",
     "unauthType": "Unauthorize Type"
